--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ img{
   height: auto;
 
 }
+*:focus{
+outline: 2px dashed var(--primary);
+outline-offset: 2px;
+}
 /* CONTAINER */
 .container{
 width: 100%;
@@ -45,4 +49,70 @@ margin-right: auto;
 /* MAIN CONTENT */
 .main-content{
   flex-grow: 1;
+}
+
+/* SITE-HEADER */
+.site-header {
+padding-top: 30px;
+padding-bottom: 30px;
+}
+.site-header-container {
+  display: flex;
+  align-items:center ;
+}
+
+.site-header-logo {
+  margin-right: auto;
+}
+.site-header-logo:hover{
+opacity: 0.8;
+}
+.site-header-logo:active{
+  opacity: 0.6;
+}
+.site-header-logo-img {
+  display: block;
+  width: 35px;
+  height: 42px;
+  object-fit: contain;
+}
+
+/* SITENAV */
+.sitenav {
+margin-right: 40px;
+transition: opacity 0.3s ease;
+}
+.sitenav-list {
+  display: flex;
+  align-items:center;
+padding: 0;
+margin: 0;
+list-style: none;
+
+}
+.sitenav-item:not(:last-child){
+  margin-right: 30px;
+  font-size: 15px;
+  color: #333;
+}
+.sitenav-link {
+  display: block;
+  text-decoration: none;
+  padding-top: 6px;
+  padding-bottom: 3px;
+  border-bottom: 3px solid transparent;
+  transition:  border-bottom 0.3s ease;
+}
+.sitenav-link:hover{
+  border-bottom: 3px solid #333;
+
+}
+
+/* SEARCH-FORM */
+
+.search-form-input {
+  padding-top: 6px;
+  padding-bottom: 6px;
+border: 0;
+border-bottom: 1px solid #333;
 }
