--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /* CUSTOM PROPS */
 :root{
 --primary:#EA625C;
+--primary-dark:#c9514c;
 --text-color:#333;
 }
 /* GLOBAL */
@@ -36,6 +37,30 @@ img{
 *:focus{
 outline: 2px dashed var(--primary);
 outline-offset: 2px;
+}
+
+/* BUTTON */
+.button {
+
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: bold;
+padding: 12px 38px;
+border: 0;
+  background-color: var(--primary);
+  color: #fff;
+  text-transform: uppercase;
+display: inline-block;
+text-decoration: none;
+transition:background-color 0.3s ease ;
+
+}
+.button:hover{
+background-color: var(--primary-dark);
+
+}
+.button:active{
+  opacity: 0.6;
 }
 /* CONTAINER */
 .container{
@@ -115,4 +140,52 @@ list-style: none;
   padding-bottom: 6px;
 border: 0;
 border-bottom: 1px solid #333;
+}
+
+/* HERO */
+.hero {
+
+  padding-bottom: 185px;
+  padding-top: 140px;
+
+
+  background-image: url(../img/watch-red.jpg);
+  background-repeat: no-repeat;
+background-position: left calc(50% + 550px) bottom;
+border-bottom: 2px solid #ddd;
+
+}
+
+/* LEAD-CTA */
+.lead-cta {
+width: 100%;
+max-width: 490px;
+}
+.lead-cta-heading {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-size: 50px;
+  line-height: 1.2;
+  color: #000;
+}
+.lead-cta-text {
+  border-left: 3px solid #888;
+  margin-top: 0;
+  margin-bottom: 30px;
+  color: #777;
+  padding-left: 37px;
+
+}
+
+/* RETINA BG */
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+.hero{
+  background-image: url(../img/watch-red@2x.jpg);
+}
 }
